# Teme-PPD

Cuda_Probleme/: Adunarea a doua matrice _CUDA.txt  Distanta dintre punctele din doua matrice _ CUDA.txt  Distanta punct p0 la elementele matricei_CUDA.txt  Inmultirea a doua matrice_CUDA.txt  Produs matrice cu vector_CUDA.txt  Produsul scalar a doi vectori_CUDA.txt
Examen 2020/: main.cpp  main.cu
OpenMP_Probleme/: Adunarea a doua matrice.txt  Produsul a doua matrice.txt  Produsul dintre o matrice si un vector.txt  Scaderea a doua matrice.txt  Suma elemente diagonala principala.txt  probl omp exemplu _ sub anul 2019.txt
histograma/: CMakeLists.txt
histograma/src/: main.cpp
matrice_vector/: CMakeLists.txt
matrice_vector/src/: main.cpp
monte-carlo/: CMakeLists.txt
monte-carlo/src/: main.cpp
